--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.8",
