--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.8",
     "react": "^18.3.1",
